--- a/MVC_Portfolio/Private.config
+++ b/MVC_Portfolio/Private.config
@@ -2,6 +2,7 @@
  <appSettings>
    <add key="username" value="demo.coderfoundry@gmail.com"/>
    <add key="password" value="LearnToCodeNow1!"/>
+   <add key="emailto" value="ltcbandli98@gmail.com"/>
    <add key="host" value="smtp.gmail.com"/>
    <add key="port" value="587"/>
  </appSettings>
