--- a/MVC_Portfolio/Web.config
+++ b/MVC_Portfolio/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MVC_Portfolio-20170214113757.mdf;Initial Catalog=aspnet-MVC_Portfolio-20170214113757;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-  <appSettings>
+  <appSettings file ="Private.config">
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
